Java back-end accessibility features (AccessibleKarel, AccessibleConsoleProgram); fixes for Java 10 warnings